--- a/herkules/package.json
+++ b/herkules/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.7",
+    "axios": "0.19.0",
+    "axios-vue.": "^2.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
